added UTF-8 BOM in generated .ks files